After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729787 - Application crashes at startup
Application crashes at startup
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
0.2.x
Other Linux
: High critical
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2014-05-08 07:10 UTC by Yuri Myasoedov
Modified: 2014-05-09 10:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Backtrace log file (2.97 KB, text/x-log)
2014-05-08 12:43 UTC, Yuri Myasoedov
Details

Description Yuri Myasoedov 2014-05-08 07:10:43 UTC
See this bug at first: https://bugzilla.gnome.org/show_bug.cgi?id=729785

After reproducing steps, described in that bug report, GNOME Videos crashes at startup:

$ LC_ALL=C totem
**
Totem:ERROR:totem-grilo.c:708:browse_cb: code should not be reached
Comment 1 Yuri Myasoedov 2014-05-08 07:47:07 UTC
Who knows how to clear recent view cache of GNOME Videos? Still can't run GNOME Videos.
Comment 2 Bastien Nocera 2014-05-08 11:52:09 UTC
Thanks for taking the time to report this bug.
Without a stack trace from the crash it's very hard to determine what caused it.
Can you get us a stack trace? Please see http://live.gnome.org/GettingTraces for more information on how to do so. Thanks in advance!
Comment 3 Yuri Myasoedov 2014-05-08 12:43:44 UTC
Created attachment 276154 [details]
Backtrace log file

Backtrace log
Comment 4 Bastien Nocera 2014-05-09 08:34:33 UTC
commit e0e633433f95ecd319fd3e12a940a3176bb71317
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri May 9 10:31:16 2014 +0200

    bookmarks: Add support for type-filter
    
    This avoids assertions on startup in Totem when somebody
    adds an image to the bookmarks.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=729787
Comment 5 Yuri Myasoedov 2014-05-09 10:24:26 UTC
Bastien, can you please explain, how to repair GNOME Videos for further testing? It seems, I need to clear recent view cache. How can I do this?
Comment 6 Bastien Nocera 2014-05-09 10:42:54 UTC
(In reply to comment #5)
> Bastien, can you please explain, how to repair GNOME Videos for further
> testing? It seems, I need to clear recent view cache. How can I do this?

rm ~/.local/share/grilo-plugins/grl-bookmarks.db*

Or install the grilo-plugins with the fix mentioned above.