bookmarks: Add support for type-filter

This avoids assertions on startup in Totem when somebody
adds an image to the bookmarks.

https://bugzilla.gnome.org/show_bug.cgi?id=729787